Update Release Notes & Dependencies